2008-01-20  Philip Van Hoof <pvanhoof@gnome.org>

	* Refactoring of all error reporting situations, errors and handling
	of connection failures, reconnecting and getting messages in case of a
	previous connection failure.
	* Several bugfixes related to connection failures
	* Several bugfixes related to connection problems when fetching
	messages
	* POP and IMAP now behave the same in case of connection problems
	while fetching a message (they try to re-authenticate and re-connect)
	* More finegrained error reporting (IO errors, SERVICE errors, SYSTEM
	errors and unknown errors).

	* This was a major API change for all modules

2008-01-19  Philip Van Hoof <pvanhoof@gnome.org>

	* Fixed sync when offline transfers took place

2008-01-17  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/tny-camel-folder:
	(folder_changed): removed a code that was modifying the number of
	cached messages when receiving an IDLE notification of expunged
	headers. It shouldn't be done because Camel was already giving us the
	proper value

2008-01-16  Mark Doffman  <mark.doffman@codethink.co.uk>
	* bindings/python/*.defs: Regenerate .defs files for updated API.

	* bindings/python/*.override: Add missing headers and Gtk types.

	* bindings/python/tinymail.override: Begin adding wrappers for
	callbacks.

2008-01-16  Jürg Billeter  <j@bitron.ch>

	* bindings/vala/: regenerate bindings

	* tests/vala-demo/tinymail-vala-test.vala: update demo app to build
	with Vala SVN

2008-01-16 Dirk-Jan C. Binnema <dirk-jan.binnema@nokia.com>

	* fix for use of unitialized variable in decode_it function,
	which caused crashes in some cases. 

2008-01-15  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-maemo/tny-maemo-conic-device.c: fixes a condition that
	was preventing the callback of connect_async from being called

2008-01-15  Philip Van Hoof <pvanhoof@gnome.org>

	* Better error reporting on connection failures
	* Fix in namespace parsing when the separator was NIL
