@@ -52,7 +52,7 @@ struct _TnyCamelSendQueueClass
 	void (*add_func) (TnySendQueue *self, TnyMsg *msg, GError **err);
 	TnyFolder* (*get_sentbox_func) (TnySendQueue *self);
 	TnyFolder* (*get_outbox_func) (TnySendQueue *self);
-	void (*cancel_func) (TnySendQueue *self, gboolean remove, GError **err);
+	void (*cancel_func) (TnySendQueue *self, TnySendQueueCancelAction cancel_action, GError **err);
 
 	void (*add_async_func) (TnyCamelSendQueue *self, TnyMsg *msg, TnySendQueueAddCallback callback, TnyStatusCallback status_callback, gpointer user_data);
 };
